--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ repository  = "https://github.com/the-cyber-boardroom/MGraph-AI__Service__Cache"
 [tool.poetry.dependencies]
 python                     = "^3.12"
 osbot-fast-api-serverless  = "*"
+memory_fs                  = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
