--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -53,7 +53,8 @@ jobs:
       - name: "run-tests"
         uses: owasp-sbot/OSBot-GitHub-Actions/.github/actions/pytest__run-tests@dev
         with:
-          test_target: "tests/unit"
+          #test_target: "tests/unit"
+          test_target: "tests/unit/fast_api/routes/test_Routes__Delete__http.py"
         env:
           FAST_API__AUTH__API_KEY__NAME: 'api-key__in_github_test'
           FAST_API__AUTH__API_KEY__VALUE: 'this-is-the-value-of-the-api-key'
