--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -39,7 +39,7 @@ env:
   PACKAGE_NAME: 'mgraph_ai_service_cache'
 
 jobs:
-  run-tests:
+  run-tests__unit:
     name: "Run tests"
     runs-on: ubuntu-latest
     steps:
@@ -58,10 +58,30 @@ jobs:
           FAST_API__AUTH__API_KEY__NAME: 'api-key__in_github_test'
           FAST_API__AUTH__API_KEY__VALUE: 'this-is-the-value-of-the-api-key'
 
+  run-tests__integration:
+    name: "Run tests"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Start Local Stack
+        uses: owasp-sbot/OSBot-GitHub-Actions/.github/actions/docker__local-stack@dev
+        with:
+          LOCAL_STACK_SERVICES: 's3,lambda,iam,logs'
+
+      - name: "run-tests"
+        uses: owasp-sbot/OSBot-GitHub-Actions/.github/actions/pytest__run-tests@dev
+        with:
+          test_target: "tests/integration"
+        env:
+          FAST_API__AUTH__API_KEY__NAME: 'api-key__in_github_test'
+          FAST_API__AUTH__API_KEY__VALUE: 'this-is-the-value-of-the-api-key'
+
   increment-tag:
     name: Increment Tag
     runs-on: ubuntu-latest
-    needs: run-tests
+    needs:
+      - run-tests__unit
+      - run-tests__integration
     steps:
       - uses: actions/checkout@v4
 
