--- a/.github/workflows/ci-pipeline__dev.yml
+++ b/.github/workflows/ci-pipeline__dev.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   deploy-dev:
+    name: "Dev"
     uses: ./.github/workflows/ci-pipeline.yml
     with:
       git_branch          : 'dev'
