--- a/.github/workflows/ci-pipeline__dev.yml
+++ b/.github/workflows/ci-pipeline__dev.yml
@@ -14,6 +14,6 @@ jobs:
       release_type        : 'minor'
       target_deploy       : 'dev'
       should_increment_tag: true
-      should_publish_pypi : true
+      should_publish_pypi : false
     secrets: inherit
 
