wired up new mgraph_ai_service_cache__web_console

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,11 @@ memory_fs                      = "*"
 osbot-fast-api-serverless      = "*"
 mgraph-ai-service-cache-client = "*"
 
+packages    = [
+    { include = "mgraph_ai_service_cache" },
+    { include = "mgraph_ai_service_cache__web_console" }
+]
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
